--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/fluent-ffmpeg": "^2.1.24",
     "@types/jest": "^29.5.2",
